[package]
name = "pcap-match"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version="4.5.32", features=["derive", "env", "deprecated"] }
itertools = "0.14.0"
jiff = "0.2.4"
libc = "0.2.171"
pcap = "2.2.0"
pnet = "0.35.0"

[build-dependencies]
cc = { version = "1.2.16", optional = true }
cmake = { version = "0.1.54", optional = true }
pkg-config = { version = "0.3.32", optional = true }

[features]
static = ["dep:pkg-config", "dep:cc", "dep:cmake"]
